# transitive-reduction

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
apps/: gerador_main.cpp  reducao_main.cpp
include/: grafo.hpp
report/: main.tex  refs.bib
src/: caminhamento.cpp  gerador_dag.cpp  grafo.cpp  grafo_io.cpp  reducao_transitiva.cpp
